# formal_langs_prac_hw1

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp
gtests/: tests.cpp
solution_src/: CMakeLists.txt  solution.cpp  solution.h
